--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           About me
         </h2>
         <p>
-          &nbsp;&nbsp;I've graduated in Jan 2023. I'm now in Microsoft, working on RDMA, large-scale network for storage and AI</a>. 
+          &nbsp;&nbsp;I've graduated in Jan 2023. I'm now at Microsoft, working on RDMA, large-scale network for storage and AI</a>. 
         </p>
         <p>
           &nbsp;&nbsp;My research interest lies broadly in the field of distributed systems and computer networks.
