--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <li class="scroll-link"><a href="http://cs.jhu.edu/~zhuolong/#top">Home</a></li>
             <li class="scroll-link"><a href="http://cs.jhu.edu/~zhuolong/#aboutme">About me</a></li>
             <li class="scroll-link"><a href="http://cs.jhu.edu/~zhuolong/#education">Education</a></li>
-            <li class="scroll-link"><a href="http://cs.jhu.edu/~zhuolong/#experience">Experience</a></li>
+            <!-- <li class="scroll-link"><a href="http://cs.jhu.edu/~zhuolong/#experience">Experience</a></li> -->
             <li class="scroll-link"><a href="http://cs.jhu.edu/~zhuolong/#publications">Publications</a></li>
           </ul>
         </div>
