--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <!-- <h3> Selected papers </h3> -->
         <li>
             <span class="papertitle">Enabling Reconfiguration-Communication Overlap for Collective Communication in Optical Networks</span><br/>
-            <span class="paperauthor">Changbo Wu</span>, Zhuolong Yu, Gongming Zhao, Hongli Xu<br/>
+            Changbo Wu, <span class="paperauthor">Zhuolong Yu</span>, Gongming Zhao, Hongli Xu<br/>
             arXiv 2025<br/>
             [<a href="https://arxiv.org/pdf/2510.19322.pdf">PDF</a>]
         </li>
