add code repo links for uno and sdrrdma

--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
             Mikhail Khalilov, Siyuan Shen, Marcin Chrapek, Tiancheng Chen, Kenji Nakano, Peter-Jan Gootzen, Salvatore Di Girolamo, Rami Nudelman, Gil Bloch, Sreevatsa Anantharamu, Mahmoud Elhaddad, Jithin Jose, Abdul Kabbani, Scott Moe, Konstantin Taranov, <span class="paperauthor">Zhuolong Yu</span>, Jie Zhang, Nicola Mazzoletti, Torsten Hoefler<br/>
             SC 2025<br/>
             <i style="color:#28B463 ;">[Artifacts Available]</i> <i style="color:#EC7063;">[Artifacts Functional]</i> <i style="color:#2980B9;">[Artifacts Reusable]</i><br/>
-            [<a href="papers/sc2025sdrrdma.pdf">PDF</a>]
+            [<a href="papers/sc2025sdrrdma.pdf">PDF</a>][<a href="https://github.com/spcl/sdr-rdma-artifact">Code</a>]
         </li>
         <li>
             <span class="papertitle">Uno: A One-Stop Solution for Inter-and Intra-Datacenter Congestion Control and Reliable Connectivity</span><br/>
             Tommaso Bonato, Sepehr Abdous, Abdul Kabbani, Ahmad Ghalayini, Nadeen Gebara, Terry Lam, Anup Agarwal, Tiancheng Chen, <span class="paperauthor">Zhuolong Yu</span>, Konstantin Taranov, Mahmoud Elhaddad, Daniele De Sensi, Soudeh Ghorbani, Torsten Hoefler<br/>
             SC 2025<br/>
             <i style="color:#28B463 ;">[Artifacts Available]</i> <i style="color:#EC7063;">[Artifacts Functional]</i> <i style="color:#2980B9;">[Artifacts Reusable]</i><br/>
-            [<a href="papers/sc2025uno.pdf">PDF</a>]
+            [<a href="papers/sc2025uno.pdf">PDF</a>][<a href="https://github.com/spcl/Uno_SC25.git">Code</a>]
         </li>
         <li>
             <span class="papertitle">Understanding the Micro-Behaviors of Hardware Offloaded Network Stacks with Lumina</span><br/>
