--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           His research interests include designing high-performance and programmable networked systems for cloud and AI workloads, low-latency communication and RDMA for large-scale distributed systems, and cloud-scale data center networks and intelligent computing infrastructure.
         </p>
         <p>
-          余卓隆现为<a href="https://www.ustc.edu.cn/">中国科学技术大学</a><a href="https://cs.ustc.edu.cn/main.htm">计算机科学与技术学院</a>特任教授。
+          余卓隆，现为<a href="https://www.ustc.edu.cn/">中国科学技术大学</a><a href="https://cs.ustc.edu.cn/main.htm">计算机科学与技术学院</a>特任教授，博士生导师。
           他于<a href="https://www.jhu.edu/">约翰斯·霍普金斯大学</a>获得博士学位，师从<a href="https://xinjin.github.io/">金鑫（Xin Jin）教授</a>和<a href="https://www.cs.jhu.edu/~vova/">Vladimir Braverman 教授</a>。
         </p>
         <p>
