--- a/index.html
+++ b/index.html
@@ -112,19 +112,31 @@
     
     <div class="container">
       <section id="home">
-        <h1>Zhuolong Yu</h1> 
-        <p class="styleT">
-          <vi>Professor(特任教授)<br>Department of Computer Science and Technology <br>University of Science and Technology of China<br>
-            E-mail:<a href="mailto:zhuolongyu@ustc.edu.cn">
-          <vi>zhuolongyu</vi>
-          <vi style="font-size:10px; font-weight:bold;"> [at]</vi>
-          <vi> ustc</vi>
-          <vi style="font-size:10px; font-weight:bold;"> [dot]</vi> 
-          <vi> edu</vi> 
-          <vi style="font-size:10px; font-weight:bold;"> [dot]</vi>
-          <vi> cn</vi>
-          </a></vi>
-         </p>
+        <div class="row">
+          <!-- Left: name and info -->
+          <div class="col-md-8 col-sm-8">
+            <h1>Zhuolong Yu</h1>
+            <p class="styleT">
+              Professor (特任教授)<br>
+              Department of Computer Science and Technology<br>
+              University of Science and Technology of China<br>
+              E-mail:
+              <a href="mailto:zhuolongyu@ustc.edu.cn">
+                zhuolongyu [at] ustc [dot] edu [dot] cn
+              </a>
+            </p>
+          </div>
+          <!-- Right: profile photo -->
+          <div class="col-md-4 col-sm-4 text-right">
+            <img src="resource/profile.jpg"
+                alt="Zhuolong Yu"
+                style="
+                  max-width: 180px;
+                  width: 100%;
+                  border-radius: 8px;
+                ">
+          </div>
+        </div>
         <hr>
       </section>
       <section id="aboutme">
