--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 style="
                   max-width: 180px;
                   width: 100%;
-                  border-radius: 8px;
+                  margin-top: 25px;
                 ">
           </div>
         </div>
